# point_ros

./: README.md
ros/src/kitti2rosbag/: CMakeLists.txt  package.xml
ros/src/kitti2rosbag/nodes/velodyne2bag/: velodyne2bag.cpp
ros/src/points_analizer/: CMakeLists.txt  package.xml
ros/src/points_analizer/include/points_analizer/: points_analizer.h
ros/src/points_analizer/nodes/points_analizer/: points_analizer.cpp  points_analizer_node.cpp
ros/src/points_donwsampler/: CMakeLists.txt  package.xml
ros/src/points_donwsampler/include/points_downsampler/: distance_voxel_filter.h  random_filter.h  ring_filter.h  ring_random_filter.h  voxel_grid_filter.h
ros/src/points_donwsampler/nodes/distance_voxel_filter/: distance_voxel_filter.cpp  distance_voxel_filter_node.cpp  voxel_grid_approxi.cpp  voxel_grid_approxi.hpp
ros/src/points_donwsampler/nodes/random_filter/: random_filter.cpp  random_filter_node.cpp
ros/src/points_donwsampler/nodes/ring_filter/: ring_filter.cpp  ring_filter_node.cpp  voxel_grid_approxi.h
ros/src/points_donwsampler/nodes/ring_random_filter/: ring_random_filter.cpp  ring_random_filter_node.cpp
ros/src/points_donwsampler/nodes/voxel_grid_filter/: voxel_grid_filter.cpp  voxel_grid_filter_node.cpp
