<?xml version="1.0"?>
<package>
  <name>kitti2rosbag</name>
  <version>0.0.0</version>
  <description>The kitti to ROSBAG pacakge</description>
  <maintainer email="tomoya.sato@tier4.jp">Tomoya-Sato</maintainer>
  <license>None</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl_conversions</run_depend>

  <export>
  </export>
</package>
